# astronomos

./: README.md  pyproject.toml
src/astro/digesto/: cli.py
