[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["src"]
include = ["astro"]
namespaces = true

[project]
name = "digesto.py"
version = "2023.10.25"
description = "Substacks organization utility for astrophotography session images."
requires-python = ">=3.9"
license = { text = "GNU Affero General Public License v3"}
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    "click"
    ,
]

optional_dependencies = [
    "colorama"
    ,
]

[project.scripts]
digesto = "astro.digesto:digesto_cli"
