[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = "digesto.py"
authors = [
    {name="Scott Barnett", email="thumdugger@gmail.com"}
    , ]
version = "2023.10.25"
description = "Substacks organization utility for astrophotography session images."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU Affero General Public License v3"}
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    "click"
    , ]


[project.scripts]
digesto = "astro.digesto.cli:digesto_cli"
